2003-01-26  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-store:
	* seahorse-key-manager-store:
	* seahorse-recipients-store:
	Bug fixes so doesn't crash for certain key changes

2003-01-25  Jose Carlos Garcia Sogo  <jsogo@debian.org>

	* configure.in: Check for GnuPG 1.2

2003-01-25  Jacob Perkins <jap1@users.sourceforge.net>

	* seahorse-signer-menu: Replaces key-menu, does all signer handling
	for preferences
	* seahorse-signer-menu-item: Replaces key-menu-item, handles key
	signals for signer-menu
	* seahorse-key-menu:
	* seahorse-key-menu-item:
	Removed
	* seahorse-preferences: Updated to use signer-menu
	* data/Makefile.am: Patch from Gregory Leblanc so schema installation
	is optional

2003-01-24  Bastien Nocera  <hadess@hadess.net>

	* src/dialogs/seahorse-add-uid.glade2:
	* src/dialogs/seahorse-export.glade2:
	* src/dialogs/seahorse-generate.glade2:
	* src/dialogs/seahorse-import.glade2:
	* src/dialogs/seahorse-preferences.glade2:
	* src/dialogs/seahorse-recipients.glade2:
	* src/dialogs/seahorse-signatures.glade2:
	* src/seahorse-file-manager.glade2:
	* src/seahorse-key-manager.glade2:
	* src/seahorse-key-properties.glade2:
	* src/seahorse-text-editor.glade2: remove the separators, use
	automatic horizontal scrollbars, fix the spacing in dialogs,
	add an icon for all the windows
	* src/seahorse-widget.c: (seahorse_widget_set_property): fix a memleak

2003-01-24  Jacob Perkins <jap1@users.sourceforge.net>

	* seahorse-key-store: Fixes and cleanups so keys & context are
	correctly finalized by listening to context's destroy signal, comments
	* seahorse-key-manager: Modified ::quit to reflect key-store changes
	* seahorse-key-manager-store: Doesn't remove subkeys when refreshing
	* seahorse-recipients-store:
	* seahorse-encrypt-recipients-store:
	Updated all key-store subclasses for more efficient key change listening

2003-01-23  Jacob Perkins <jap1@users.sourceforge.net>

	* seahorse-encrypt-recipients-store: Added
	* seahorse-key-store: