@@ -2,7 +2,6 @@
 # Please keep this file sorted alphabetically.
 data/seahorse.desktop.in
 data/seahorse.schemas.in
-src/dialogs/about.glade2
 src/dialogs/seahorse-delete.c
 src/dialogs/seahorse-export.c
 src/dialogs/seahorse-export.glade2
@@ -20,6 +19,7 @@ src/seahorse-encrypt-recipients-store.c
 src/seahorse-file-manager.c
 src/seahorse-file-manager.glade2
 src/seahorse-key-manager-store.c
+src/seahorse-key-manager.c
 src/seahorse-key-manager.glade2
 src/seahorse-key-properties.c
 src/seahorse-key-properties.glade2
