@@ -1,22 +1,0 @@
-<?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
-<!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
-
-<glade-interface>
-<requires lib="gnome"/>
-
-<widget class="GnomeAbout" id="about">
-  <property name="visible">True</property>
-  <property name="destroy_with_parent">False</property>
-  <property name="icon">seahorse.png</property>
-  <property name="logo">seahorse.png</property>
-  <property name="copyright" translatable="yes">2002, Seahorse Project</property>
-  <property name="comments" translatable="yes">http://seahorse.sourceforge.net</property>
-  <property name="authors">Jacob Perkins &lt;jap1@users.sourceforge.net&gt;
-Jose Carlos Garcia Sogo &lt;jsogo@users.sourceforge.net&gt;
-Jean Schurger &lt;jk24@users.sourceforge.net&gt;
-</property>
-  <property name="translator_credits">Jose Carlos Garcia Sogo &lt;jsogo@users.sourceforge.net&gt;
-Erich Schubert &lt;erich@debian.org&gt;</property>
-</widget>
-
-</glade-interface>
