@@ -1,3 +1,8 @@
+2003-01-29  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* POTFILES.in: Removed about.glade2,
+	added seahorse-key-manager.c
+
 2003-01-29  Jose Carlos Garcia Sogo <jsogo@debian.org>
 
 	* es.po: Updated Spanish translation.
