@@ -1,3 +1,8 @@
+2003-01-29  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* seahorse-key-manager: Added patch from Jose to do about dialog
+	* src/dialogs/about.glade2: Removed
+
 2003-01-26  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse-key-store:
